fix message text to wrap

--- a/public/styles.css
+++ b/public/styles.css
@@ -55,6 +55,12 @@ form {
   margin-top: 5px;
   margin-bottom: 5px;
   display: inline-block;
+  max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  word-wrap: break-word;
+  
+  height: fit-content;
 }
 
 .receiving {
